Spacing fixes

--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -29,7 +29,7 @@
   top: 50%;
   right: 32px;
   font-size: 3rem;
-  color: #000;
+  color: #4a4a4a;
   z-index: 10;
   cursor: pointer;
   user-select: none;
@@ -40,7 +40,7 @@
   top: 50%;
   left: 32px;
   font-size: 3rem;
-  color: #000;
+  color: #4a4a4a;
   z-index: 10;
   cursor: pointer;
   user-select: none;
